--- a/index.html
+++ b/index.html
@@ -5,30 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <div #page-wrapper>
+    <aside id="toggle-side-container">
+
+    </aside>
+
+
+    <main id="primary-content">
       <header>
         <h1>Password Generator</h1>
+        <p>A simple tool for generating strong passwords so you stay secure across the web.</p>
       </header>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
-        </div>
-        <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
-        </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+
+      <div class="wrapper">
+        <div class="card">
+          <div class="card-body">
+            <textarea
+              readonly
+              id="password"
+              placeholder="Your Secure Password"
+              aria-label="Generated Password"
+            ></textarea>
+          </div>
+          <button id="generate" class="btn">Generate</button>
         </div>
       </div>
-    </div>
+  </main>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
