--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       </div>
   </main>
 </div>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
