password generating correctly in response to checkbox input... would like to know if theres a cleaner code alternative

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
 
           <ul id="checkbox-container">
             <li>
-              <input type="checkbox" id="lowercase-toggle" name="lowercase-toggle" value="lowercase">
-              <label for="lowercas-toggle">Include Lowercase</label>
+              <input type="checkbox" id="lowercase-toggle" name="lowercase-toggle" value="lowercase" checked>
+              <label for="lowercase-toggle">Include Lowercase</label>
             </li>
             <li>
-              <input type="checkbox" id="uppercase-toggle" name="uppercase-toggle" value="uppercase">
+              <input type="checkbox" id="uppercase-toggle" name="uppercase-toggle" value="uppercase" checked>
               <label for="uppercase-toggle">Include Uppercase</label>
             </li>
             <li>
-              <input type="checkbox" id="numbers-toggle" name="numbers-toggle" value="numbers">
+              <input type="checkbox" id="numbers-toggle" name="numbers-toggle" value="numbers" checked>
               <label for="numbers-toggle">Include Numbers</label>
             </li>
             <li>
-              <input type="checkbox" id="special-char-toggle" name="special-char-toggle" value="speacial-char">
-              <label for="speacial-char-toggle">Include Special Characters</label>
+              <input type="checkbox" id="special-char-toggle" name="special-char-toggle" value="special-char" checked>
+              <label for="special-char-toggle">Include Special Characters</label>
             </li>
           </ul>
 
