adding alert if all checkboxes for password criteria are unselected... discovered bug though.. password generation function is firing twice for some reason

--- a/index.html
+++ b/index.html
@@ -55,11 +55,7 @@
               </li>
             </ul>
 
-            <div id=copy-button-container>
-              <div id=copy-icon-container>
-                <i class="far fa-clipboard"></i>
-              </div>
-            </div>
+            <button id="copy-button"><i class="far fa-clipboard"></i></button>
 
             <button id="generate" class="btn">Generate</button>
           </div>
