fixed bug where password generation was firing twice

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </li>
             </ul>
 
-            <button id="copy-button"><i class="far fa-clipboard"></i></button>
+            <button id="copy"><i class="far fa-clipboard"></i></button>
 
             <button id="generate" class="btn">Generate</button>
           </div>
